# warden

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pytest.ini
dashboard/: .gitignore  Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.json
db/: schema.sql
docs/: SLACK_SETUP.md
services/agent/: Dockerfile  pyproject.toml
services/agent/warden_agent/: __init__.py  classifier.py  cli.py  deps.py  github_read.py  graph.py  guards.py  proposals.py  runner_client.py  slack_app.py
services/agent/warden_agent/brain/: __init__.py  agent.py  context.py  proposing.py  tools.py
services/agent/warden_agent/capabilities/: __init__.py  base.py
services/agent/warden_agent/capabilities/explorer/: __init__.py  deps.py  registry.py  repo_reader.py  tools.py
services/agent/warden_agent/capabilities/fixer/: __init__.py  actions.py
services/agent/warden_agent/capabilities/triage/: __init__.py  build.py  classifier.py  deps.py  github_read.py  graph.py  types.py
services/agent/warden_agent/surfaces/: __init__.py  cards.py  cli.py  mrkdwn.py  slack_app.py
services/common/: pyproject.toml
services/common/warden_common/: __init__.py  config.py  crypto.py  db.py  ledger.py  models.py  reads.py  schemas.py
services/runner/: Dockerfile  pyproject.toml
services/runner/warden_runner/: __init__.py  app.py  executor.py  github_write.py
services/runner/warden_runner/executors/: __init__.py  base.py  github_issues.py  github_repo.py
tests/: conftest.py  fakes.py  test_brain_routing.py  test_crypto.py  test_explorer_reader.py  (+11 more)
(+13 files in other folders)
