[project]
name = "warden-common"
version = "0.1.0"
description = "Shared ledger, models, and config for Warden"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0,<3",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["warden_common*"]
